CARLYLE: setX-ing the scrollerDiv as well as the contentDiv finally seems to solve flicker problems on all platforms
git-svn-id: http://canister.inventivelabs.com.au/gadgets/carlyle/trunk@299 0c48055e-7f81-11dc-995a-49420fec616f

--- a/test/totc/test.css
+++ b/test/totc/test.css
@@ -28,6 +28,8 @@ body {
   right: 15px;
   background-color: #FCF6F0;
   -webkit-box-shadow: 2px 2px 4px #CBA;
+  -webkit-border-top-left-radius: 13px 3px;
+  -webkit-border-top-right-radius: 13px 3px;
 }
 .dummyPage + .dummyPage {
   top: 16px;
@@ -79,20 +81,20 @@ body {
 
 .bookTitle {
   position: absolute;
-  top: 8px;
+  top: 10px;
   left: 1em;
 }
 
 .chapterTitle {
   position: absolute;
-  bottom: 8px;
+  bottom: 10px;
   left: 1em;
 }
 
 .pageNumber {
   position: absolute;
-  bottom: 8px;
-  right: 1em;
+  bottom: 10px;
+  right: 1.5em;
 }
 
 #readerBg {
